<resources>
    <string name="app_name">ComputerShop</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_cart">Корзина</string>
    <string name="title_profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="sign_up_solicitation">Регистрация</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="product_title">AMD FX-4300 OEM</string>
    <string name="product_price">2499</string>
    <string name="product_info">Описание товара</string>
    <string name="create_order">Оформить заказ</string>
    <string name="order_address">Адрес доставки</string>
    <string name="order_user_name">Ф.И.О</string>
    <string name="phone_number">Номер телефона</string>
    <string name="total_price">Цена без скидки:</string>
    <string name="discount">Размер скидки:</string>
    <string name="total_with_discount">Итоговая цена:</string>
    <string name="order_name">Заказ №44 от 05.05.1333</string>
    <string name="order_status">Заказ создан</string>
    <string name="customer_phone_number">+79999999999</string>
    <string name="customer_address">Ростов-на-Дону, Садовая 4</string>
    <string name="customer_name">Рязанцев Вячеслав Владимирович</string>
    <string name="order_number">Заказ №323 от 05.05.2099</string>
    <string name="order_total_price">129999</string>
    <string name="total_price_with_discount">99999</string>
    <string name="to_customer_profile">К моим заказам</string>
    <string name="customer_address_title">Адрес клиента</string>
    <string name="order_status_title">Статус заказа</string>
    <string name="order_price_with_discount">Цена со скидкой</string>
    <string name="total_price_title">Цена без скидки</string>
    <string name="order_quantity_title">Количество:</string>
    <string name="order_item_price_title">Цена:</string>
    <string name="exit_btn">Выйти из личного кабинета</string>
    <string name="profile_order_number">Заказ №%1$d</string>
    <string name="order_cost">Стоимость заказа</string>
</resources>