<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.OrderFragment">

    <EditText
        android:id="@+id/clientAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/order_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/clientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/order_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientAddress" />

    <EditText
        android:id="@+id/clientPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientName" />

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientPhone" />

    <TextView
        android:id="@+id/totalDiscountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/discount"
        app:layout_constraintEnd_toStartOf="@+id/totalWithDiscountText"
        app:layout_constraintStart_toEndOf="@+id/totalPriceText"
        app:layout_constraintTop_toBottomOf="@+id/clientPhone" />

    <TextView
        android:id="@+id/totalWithDiscountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total_with_discount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientPhone" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_price"
        app:layout_constraintEnd_toEndOf="@+id/totalPriceText"
        app:layout_constraintStart_toStartOf="@+id/totalPriceText"
        app:layout_constraintTop_toBottomOf="@+id/totalPriceText" />

    <TextView
        android:id="@+id/totalDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_price"
        app:layout_constraintEnd_toEndOf="@+id/totalDiscountText"
        app:layout_constraintStart_toStartOf="@+id/totalDiscountText"
        app:layout_constraintTop_toBottomOf="@+id/totalDiscountText" />

    <TextView
        android:id="@+id/totalWithDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_price"
        app:layout_constraintEnd_toEndOf="@+id/totalWithDiscountText"
        app:layout_constraintStart_toStartOf="@+id/totalWithDiscountText"
        app:layout_constraintTop_toBottomOf="@+id/totalWithDiscountText" />

    <Button
        android:id="@+id/createOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_order"
        app:layout_constraintEnd_toEndOf="@+id/totalDiscount"
        app:layout_constraintStart_toStartOf="@+id/totalDiscount"
        app:layout_constraintTop_toBottomOf="@+id/totalDiscount" />

</androidx.constraintlayout.widget.ConstraintLayout>