<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/white"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/profileOrderNumber"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_order_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileOrderName"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_weight="0.1"
        android:text="@string/customer_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemPriceText" />

    <TextView
        android:id="@+id/profileOrderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/order_status"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profileOrderItemPrice"
        app:layout_constraintEnd_toEndOf="@+id/itemQuantityText"
        app:layout_constraintStart_toStartOf="@+id/itemQuantityText"
        app:layout_constraintTop_toBottomOf="@+id/itemQuantityText" />

    <TextView
        android:id="@+id/profileOrderItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:text="@string/product_price"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/itemPriceText"
        app:layout_constraintStart_toStartOf="@+id/itemPriceText"
        app:layout_constraintTop_toBottomOf="@+id/itemPriceText" />

    <TextView
        android:id="@+id/itemQuantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/order_status_title"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemPriceText"
        app:layout_constraintTop_toTopOf="@+id/itemPriceText" />

    <TextView
        android:id="@+id/itemPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/order_cost"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/profileOrderName"
        app:layout_constraintTop_toBottomOf="@+id/profileOrderNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>