<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.LoginFragment">

    <data>
        <variable
            name="loginFragment"
            type="com.example.computershop.ui.profile.LoginFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/auth_padding">

            <EditText
                android:id="@+id/sign_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/sign_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_padding"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_padding"
                android:layout_gravity="center"
                android:onClick="@{() -> loginFragment.login()}"
                android:text="@string/login"/>

            <Button
                android:id="@+id/nav_to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/auth_padding"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="@{() -> loginFragment.goToSignUp()}"
                android:text="@string/sign_up_solicitation"
                android:textColor="#6D4C41" />

        </LinearLayout>
    </ScrollView>
</layout>