<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/white"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageOfOrderItem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleOfOrderItem"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/product_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageOfOrderItem"
        app:layout_constraintTop_toTopOf="@+id/imageOfOrderItem" />

    <TextView
        android:id="@+id/categoryOfOrderItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:text="@string/product_info"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageOfOrderItem"
        app:layout_constraintTop_toBottomOf="@+id/titleOfOrderItem" />

    <TextView
        android:id="@+id/quantityOfOrderItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageOfOrderItem"
        app:layout_constraintStart_toEndOf="@+id/itemQuantityText" />

    <TextView
        android:id="@+id/cartOrderItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:text="@string/product_price"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageOfOrderItem"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/itemQuantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_quantity_title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageOfOrderItem"
        app:layout_constraintStart_toStartOf="@+id/categoryOfOrderItem" />

    <TextView
        android:id="@+id/itemPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/order_item_price_title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageOfOrderItem"
        app:layout_constraintEnd_toStartOf="@+id/cartOrderItemPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>