<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/white"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageOfCartItem"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleOfCartItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/categoryOfCartItem"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.1"
            android:text="@string/product_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReduceQuantityOfCartItem"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/button_cart_round_background_gradient"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/quantityOfCartItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnIncreaseQuantityOfCartItem"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/button_cart_round_background_gradient"
                android:text="+"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cartItemPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product_price"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>